--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -231,8 +231,17 @@ jobs:
         uses: azure/cli@v1
         with:
           inlineScript: |
+            echo "Aguardando indexação final das funções..."
             sleep 15
-            MASTER_KEY=$(az functionapp keys list --resource-group "$RG" --name "$FUNCTIONAPP_NAME" -o tsv)
+            echo "Obtendo master key da Function App '$FUNCTIONAPP_NAME'..."
+            MASTER_KEY=$(az functionapp keys list \
+              --resource-group "$RG" \
+              --name "$FUNCTIONAPP_NAME" \
+              --query "masterKey" -o tsv)
+            if [ -z "$MASTER_KEY" ]; then
+              echo "Erro: não conseguiu obter master key da Function App."
+              exit 1
+            fi
             echo "FUNCTION_KEY=$MASTER_KEY" >> $GITHUB_OUTPUT
 
       - name: Construir FUNCTION URLs
