--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ jobs:
       STORAGE_ACCOUNT_NAME: 'miniprojetostorage20'
       CONTAINER_NAME: 'reddit-posts'
       REDDIT_USER: 'Major-Noise-6411'
-      REDDIT_PASSWORD: 'minoprojetocloud'
+      REDDIT_PASSWORD: 'miniprojetocloud'
       CLIENT_ID: 'bzG6zHjC23GSenSIXe0M-Q'
       CLIENT_SECRET: 'DoywW0Lcc26rvDforDKkLOSQsUUwYA'
 
@@ -149,6 +149,15 @@ jobs:
             echo "SAS_TOKEN=$sasToken" >> $GITHUB_OUTPUT
             echo "CONTAINER_ENDPOINT_SAS=$fullSasUrl" >> $GITHUB_OUTPUT
 
+      - name: Obter connection string da Storage Account
+        id: get_storage_conn
+        run: |
+          CONN=$(az storage account show-connection-string \
+            --name "$STORAGE_ACCOUNT_NAME" \
+            --resource-group "$RG" \
+            --query connectionString -o tsv)
+          echo "STORAGE_CONNECTION_STRING=$CONN" >> $GITHUB_OUTPUT
+
       - name: Login Docker Hub
         uses: docker/login-action@v2
         with:
@@ -207,7 +216,7 @@ jobs:
               --settings \
                 FUNCTIONS_WORKER_RUNTIME=python \
                 FUNCTIONS_EXTENSION_VERSION="~4" \
-                AzureWebJobsStorage="$STORAGE_CONNECTION_STRING" \
+                AzureWebJobsStorage="${{ steps.get_storage_conn.outputs.STORAGE_CONNECTION_STRING }}" \
                 COSMOS_ENDPOINT="$COSMOS_ENDPOINT" \
                 COSMOS_KEY="$COSMOS_KEY" \
                 COSMOS_DATABASE="RedditApp" \
@@ -232,42 +241,26 @@ jobs:
         with:
           inlineScript: |
             echo "Aguardando Function App iniciar..."
-            # Primeiro, espera um pouco fixo
             sleep 30
-
-            # Verifica repetidamente se a Function App está em estado Running e tenta listar a key
             MAX_RETRIES=5
             SLEEP_SECONDS=20
             attempt=1
             MASTER_KEY=""
             while [ $attempt -le $MAX_RETRIES ]; do
-              echo "Tentativa $attempt de $MAX_RETRIES: verificando estado da Function App..."
               state=$(az functionapp show --resource-group "$RG" --name "$FUNCTIONAPP_NAME" --query "state" -o tsv 2>/dev/null)
-              echo "State retornado: '$state'"
               if [ "$state" = "Running" ]; then
-                echo "Function App está Running; tentando listar master key..."
-                # Tenta listar host keys
                 MASTER_KEY=$(az functionapp keys list --resource-group "$RG" --name "$FUNCTIONAPP_NAME" --query "masterKey" -o tsv 2>/dev/null || echo "")
                 if [ -n "$MASTER_KEY" ]; then
-                  echo "Master key obtida com sucesso."
                   break
-                else
-                  echo "Não conseguiu obter master key nesta tentativa."
                 fi
-              else
-                echo "Function App não está Running ainda."
               fi
               attempt=$((attempt+1))
-              echo "Aguardando $SLEEP_SECONDS segundos antes da próxima tentativa..."
               sleep $SLEEP_SECONDS
             done
-
             if [ -z "$MASTER_KEY" ]; then
-              echo "Erro: não conseguiu obter master key da Function App após $MAX_RETRIES tentativas."
               exit 1
             fi
             echo "FUNCTION_KEY=$MASTER_KEY" >> $GITHUB_OUTPUT
-
 
       - name: Construir FUNCTION URLs
         id: set_function_url
